# solphi-radar-hackathon

./: .gitignore  LICENSE  README.md
giza-nlp/: zk-ml.py
solfhe-analyzer/: Cargo.toml  solfhe.json
solfhe-analyzer/src/: main.rs
solfhe-analyzer/src-tauri/: blink-matcher.py  tauri.conf.json
solfhe-analyzer/src-tauri/src/: main.rs
solfhe-analyzer/tauri/: Cargo.toml  blink-matcher.py  tauri.conf.json
solfhe-analyzer/tauri/src/: main.rs
solphi-blinks/: package-lock.json  package.json
solphi-blinks/examples/nextjs/: package-lock.json  package.json
solphi-blinks/examples/nextjs/src/app/api/actions/dialect/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/metaplex/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/sei/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/solana/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/solflare/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/solphi/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/superteam/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/turbin/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/wormhole/: route.ts
solphi-blinks/examples/nextjs/src/app/api/actions/zkLokomotive/: route.ts
superteam-blinks/: LICENSE  README.md  package-lock.json  package.json
superteam-blinks/web/: project.json
superteam-blinks/web/app/: layout.tsx
superteam-blinks/web/app/api/action/: route.ts
zk-lokomotive-blinks/: README.md  package-lock.json  package.json
zk-lokomotive-blinks/blinks/: README.md  package-lock.json  package.json
zk-lokomotive-blinks/blinks/web/app/: layout.tsx
zk-lokomotive-blinks/blinks/web/app/api/action/: route.ts
