[package]
name = "solfhe-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.26.0", features = ["bundled"] }
url = "2.2.2"
dirs = "4.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
sha2 = "0.10.6"
hex = "0.4.3"
solana-sdk = "1.16.0"
solana-client = "1.16.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
spl-memo = "3.0.1"
solana-transaction-status = "1.16.0"
tauri = "1.7.2"

