[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
tokio = { version = "1.25", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
url = "2.3.1"
sha2 = "0.10.6"
base64 = "0.21.0"
solana-sdk = "1.14"
solana-client = "1.14"
solana-transaction-status = "1.14"
spl-memo = "3.0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
